Improved docker